--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,17 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
 
+springboot:
+  jwt:
+    api:
+      secret:
+        key: secretKey
 
 #      spring.jpa.properties.hibernate.format_sql=true
 #      spring.jpa.properties.hibernate.show_sql=true
