--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,9 +6,16 @@ spring:
     password: jkljkl..
 
   jpa:
+    defer-datasource-initialization: true
     hibernate:
-      ddl-auto: update
-      format_sql: true
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MariaDB103Dialect # dialect도 mariadb에 맞게 설정
 
-    show-sql: true
+  sql:
+    init:
+      data-locations: classpath:/sql/data.sql # sql 폴더 내에 있는 모든 파일을 실행
+      platform: mariadb
+      mode: always
 
