--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,28 @@ spring:
     pathmatch:
       matching-strategy: ant_path_matcher
 
-springboot:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: your-email@gmail.com
+    password: your-password
+    properties:
+      mail:
+        transport:
+          protocol: smtp
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+        debug: true
+
   jwt:
     api:
       secret:
         key: secretKey
+    invitation:
+      secret:
+        key: invTokenSecretKey
 
 #      spring.jpa.properties.hibernate.format_sql=true
 #      spring.jpa.properties.hibernate.show_sql=true
