--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,10 @@ spring:
       secret:
         key: invTokenSecretKey
 
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+
 #      spring.jpa.properties.hibernate.format_sql=true
 #      spring.jpa.properties.hibernate.show_sql=true
 #      spring.jpa.hibernate.ddl-auto=update
